[package]
name = "bb8-libsql"
version = "0.1.0"
description = "A bb8 connection manager for libsql"
authors = ["Adam Harvey <adam@adamharvey.name>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/LawnGnome/bb8-libsql"

[dependencies]
async-trait = "0.1"
bb8 = "0.7"
libsql = "0.4.0"
thiserror = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
anyhow = "1"
futures = "0.3"
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
